# parsing_graphs

./: pyproject.toml
classify_plot_type/: data_module.py  dataset.py
src/classify_plot_type/: data_module.py  model.py
src/find_axes_tick_labels/: dataset.py
src/parse_plots/: __main__.py  benetech_score.py  data_module.py  metrics.py  runner.py  utils.py
src/parse_plots/classify_plot_type/: dataset.py  model.py
src/parse_plots/detect_axes_labels_text/: detect_text.py  finetune_ocr_model.py  ocr_model.yml
src/parse_plots/detect_axes_labels_text/_ocr_trainer/: dataset.py  model.py  test.py  train.py  trainer.ipynb
src/parse_plots/detect_plot_values/: dataset.py  line_segmentation_model.py  model.py  unet.py
src/parse_plots/find_axes_tick_labels/: dataset.py  model.py
src/parse_plots/scripts/: benetech_score.py
