# -----------------------------------------------------------------------------
##  Build System Configurations
#   https://setuptools.pypa.io/en/latest/setuptools.html#building-and-distributing-packages-with-setuptools
# -----------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=59", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "parsing_graphs"
description = "parse graph dataset"
dynamic = [ "version"]
requires-python = ">=3.7"

dependencies = [
    "torch",
    "lightning",
    "torchmetrics @ https://github.com/Lightning-AI/torchmetrics/archive/master.zip",
    "numpy",
    "torchvision",
    "matplotlib",
    "mlflow",
    "pycocotools",
    "opencv-python-headless",
    "boto3",
    "pytesseract",
    "scikit-learn",
    "easyocr",
    "argschema",
    "backboned-unet @ git+https://github.com/mkisantal/backboned-unet.git@8e60ce62481c56eacf4a1441c376bb580da41bc5",
    "albumentations"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]